fixed pdf alignment

--- a/app/assets/stylesheets/pages/_transaction.scss
+++ b/app/assets/stylesheets/pages/_transaction.scss
@@ -41,7 +41,8 @@
 
 .transaction-confirmation__pdf p {
   margin-bottom: 0;
-
+  font-size: 14px;
+  text-align: center;
 }
 
 #pdf-logo {
